Refactor to simpler config

--- a/0x01-Webpack/task_2/css/main.css
+++ b/0x01-Webpack/task_2/css/main.css
@@ -2,3 +2,10 @@
   display: inline;
   font-weight: bold;
 }
+
+#logo {
+	width: 200px;
+	height: 200px;
+	background: url('../assets/holberton-logo.jpg');
+	background-size: 200px 200px;
+}
