--- a/0x02-react_intro/task_2/dashboard/src/App.css
+++ b/0x02-react_intro/task_2/dashboard/src/App.css
@@ -8,20 +8,11 @@
 }
 
 .App-header {
-  /* background-color: #282c34; */
-  /* min-height: 100vh; */
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-/* .logo-title {
-  display: flex;
-  align-items: center;
-} */
 
 .title {
   color: red;
@@ -40,4 +31,5 @@
 
 .App-footer {
   margin-bottom: 2rem;
+  font-style: italic;
 }
